--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "02edb123-fbf3-4025-abe6-bed5b7376cdf"
 authors = ["Lilith Orion Hafner <lilithhafner@gmail.com> and contributors"]
 version = "0.0.0"
 
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
+Random = "1.11.0"
+StaticArrays = "1.9.8"
 julia = "1.6.7"
 
 [extras]
