--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,9 +13,9 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 60
+    name: Julia ${{ matrix.version }} - ${{ matrix.arch }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
     permissions: # needed to allow julia-actions/cache to proactively delete old caches that it has created
       actions: write
       contents: read
@@ -23,15 +23,14 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.11'
-          - '1.6'
+          - '1'
+          - 'lts'
           - 'pre'
-        os:
-          - ubuntu-latest
-          - macOS-latest
-          - windows-latest
         arch:
           - x64
+        include:
+          - version: '1'
+            arch: x86
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
