--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -74,6 +74,6 @@ jobs:
         shell: julia --project=docs --color=yes {0}
         run: |
           using Documenter: DocMeta, doctest
-          using DynamicDiscreteSampler
-          DocMeta.setdocmeta!(DynamicDiscreteSampler, :DocTestSetup, :(using DynamicDiscreteSampler); recursive=true)
-          doctest(DynamicDiscreteSampler)
+          using DynamicDiscreteSamplers
+          DocMeta.setdocmeta!(DynamicDiscreteSamplers, :DocTestSetup, :(using DynamicDiscreteSamplers); recursive=true)
+          doctest(DynamicDiscreteSamplers)
