--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Lilith Orion Hafner <lilithhafner@gmail.com> and contributors"]
 version = "0.0.0"
 
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+Distributions = "0.25"
 Random = "1.10.0"
 StaticArrays = "1.9.8"
 julia = "1.10.0"
