--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,14 @@ version = "0.0.0"
 [deps]
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 Dictionaries = "0.4"
 Distributions = "0.25"
+DoubleFloats = "1"
 Random = "1.10.0"
 StaticArrays = "1.9.8"
 julia = "1.10.0"
