--- a/Project.toml
+++ b/Project.toml
@@ -1,17 +1,15 @@
 name = "DynamicDiscreteSamplers"
 uuid = "02edb123-fbf3-4025-abe6-bed5b7376cdf"
-authors = ["Lilith Orion Hafner <lilithhafner@gmail.com> and contributors"]
+authors = ["Lilith Orion Hafner <lilithhafner@gmail.com>, Adriano Meligrana <adrianomeligrana@proton.me> and contributors"]
 version = "0.0.0"
 
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 Distributions = "0.25"
-DoubleFloats = "1"
 Random = "1.10.0"
 StaticArrays = "1.9.8"
 julia = "1.10.0"
