--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,8 @@ Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Aqua", "HypothesisTests", "StableRNGs", "StatsBase", "Test"]
+test = ["Aqua", "HypothesisTests", "StableRNGs", "StatsBase", "StatsFuns", "Test"]
