--- a/.github/workflows/benchmark_pr_2.yml
+++ b/.github/workflows/benchmark_pr_2.yml
@@ -75,7 +75,7 @@ jobs:
             - name: Join Tables
               run: |
                 echo "${{ steps.fcbenchmark.outputs.comment-body }}" >> old_body.md
-                julia join_table.jl body.md old_body.md merged_body.md
+                julia .github/workflows/join_table.jl body.md old_body.md merged_body.md
 
             - name: Comment on PR
               uses: peter-evans/create-or-update-comment@v4
