--- a/.github/workflows/benchmark_pr_2.yml
+++ b/.github/workflows/benchmark_pr_2.yml
@@ -39,15 +39,15 @@ jobs:
               run: |
                 mkdir results
                 benchpkg --add https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl ${{ steps.extract-package-name.outputs.package_name }} --rev="${{github.event.pull_request.base.sha}},${{github.event.pull_request.head.sha}}" --url=${{ github.event.repository.clone_url }} --bench-on="${{github.event.pull_request.head.sha}}" --output-dir=results/ --tune
-            # - name: Create plots from benchmarks
-            #   run: |
-            #     mkdir -p plots
-            #     benchpkgplot ${{ steps.extract-package-name.outputs.package_name }} --rev="${{github.event.pull_request.base.sha}},${{github.event.pull_request.head.sha}}" --npart=10 --format=png --input-dir=results/ --output-dir=plots/
-            # - name: Upload plot as artifact
-            #   uses: actions/upload-artifact@v4
-            #   with:
-            #     name: plots
-            #     path: plots
+            - name: Create plots from benchmarks
+              run: |
+                mkdir -p plots
+                benchpkgplot ${{ steps.extract-package-name.outputs.package_name }} --rev="${{github.event.pull_request.base.sha}},${{github.event.pull_request.head.sha}}" --npart=10 --format=png --input-dir=results/ --output-dir=plots/
+            - name: Upload plot as artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: plots
+                path: plots
             - name: Create markdown table from benchmarks
               run: |
                 benchpkgtable ${{ steps.extract-package-name.outputs.package_name }} --rev="${{github.event.pull_request.base.sha}},${{github.event.pull_request.head.sha}}" --input-dir=results/ --ratio > table.md
@@ -61,8 +61,8 @@ jobs:
                 echo 'A plot of the benchmark results have been uploaded as an artifact to the workflow run for this PR.' >> body.md
                 echo 'Go to "Actions"->"Benchmark a pull request"->[the most recent run]->"Artifacts" (at the bottom).' >> body.md
 
-            # - name: wait
-            #   run: sleep 30
+            - name: wait
+              run: sleep 30
 
             - name: Find Comment
               uses: peter-evans/find-comment@v3
