--- a/.github/workflows/benchmark_pr.yml
+++ b/.github/workflows/benchmark_pr.yml
@@ -14,10 +14,12 @@ permissions:
 jobs:
     generate_plots:
         runs-on: ubuntu-latest
-
+        
         steps:
             - uses: actions/checkout@v4
             - uses: julia-actions/setup-julia@v2
+              with:
+                version: nightly
             - uses: julia-actions/cache@v2
             - name: Extract Package Name from Project.toml
               id: extract-package-name
