--- a/.github/workflows/benchmark_pr_2.yml
+++ b/.github/workflows/benchmark_pr_2.yml
@@ -18,6 +18,8 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - uses: julia-actions/setup-julia@v2
+            with:
+                version: nightly
             - uses: julia-actions/cache@v2
             - name: Extract Package Name from Project.toml
               id: extract-package-name
