--- a/.github/workflows/benchmarks2.yml
+++ b/.github/workflows/benchmarks2.yml
@@ -1,8 +1,8 @@
 name: Benchmark
 
 on:
-  push:
+  push
 
 jobs:
   benchmark:
-    uses: LilithHafner/chairmarks-ci/comment.yml@main
+    uses: LilithHafner/chairmarks-ci/.github/workflows/comment.yml@main
