--- a/.github/workflows/benchmarks2.yml
+++ b/.github/workflows/benchmarks2.yml
@@ -3,6 +3,10 @@ name: Benchmark
 on:
   push
 
+permissions:
+  # Lets chairmarks-ci post bot comment to the pull request
+  pull-requests: write
+
 jobs:
   benchmark:
     uses: LilithHafner/chairmarks-ci/.github/workflows/comment.yml@main
