Revert "Don't specify rev"
This reverts commit c7ba93f38e542d14d89240991f445e197ef0f0f7.

--- a/.github/workflows/benchmarks2.yml
+++ b/.github/workflows/benchmarks2.yml
@@ -9,4 +9,4 @@ permissions:
 
 jobs:
   benchmark:
-    uses: LilithHafner/chairmarks-ci/.github/workflows/comment.yml
+    uses: LilithHafner/chairmarks-ci/.github/workflows/comment.yml@main
