Fix syntax error

--- a/.github/workflows/benchmark_pr.yml
+++ b/.github/workflows/benchmark_pr.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         trial: [1, 2]
-        os: [ubuntu-latest, macos-latest]
+        os: ["ubuntu-latest", "macos-latest"]
         ref: [${{ github.event.pull_request.head.sha }}, ${{ github.event.pull_request.base.sha }}]
     uses: ./.github/workflows/benchmark.yml
     with:
