--- a/.github/workflows/benchmark_pr.yml
+++ b/.github/workflows/benchmark_pr.yml
@@ -29,7 +29,7 @@ jobs:
     with:
       os: ${{ matrix.os }}
       ref: ${{ matrix.rev }}
-      artifact-name: ${{ matrix.trial }}-${{ matrix.os }}-${{ matrix.ref }}
+      artifact-name: ${{ matrix.trial }}-SEP-${{ matrix.os }}-SEP-${{ matrix.ref }}
   post-comment:
     needs: benchmark
     if: always()
