--- a/.github/workflows/benchmark_pr.yml
+++ b/.github/workflows/benchmark_pr.yml
@@ -19,16 +19,18 @@ jobs:
         trial:
           - 1
           - 2
+          - 3
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
         ref:
           - ${{ github.event.pull_request.head.sha }}
           - ${{ github.event.pull_request.base.sha }}
     uses: ./.github/workflows/benchmark.yml
     with:
       os: ${{ matrix.os }}
-      ref: ${{ matrix.rev }}
+      ref: ${{ matrix.ref }}
       artifact-name: ${{ matrix.trial }}-SEP-${{ matrix.os }}-SEP-${{ matrix.ref }}
   post-comment:
     needs: benchmark
