--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -30,12 +30,7 @@ jobs:
     runs-on: ${{ inputs.os }}
     timeout-minutes: 10
     steps:
-    - uses: actions/checkout@v4 # Setup
-      with:
-        ref: ${{ inputs.bench-on }}
-        sparse-checkout: benchmark/benchmarks.jl
-    - run: cp benchmark/benchmarks.jl ..
-    - uses: julia-actions/setup-julia@v2
+    - uses: julia-actions/setup-julia@v2 # Setup
     - uses: julia-actions/cache@v2
 
     - name: Randomize refs # Randomize
@@ -48,6 +43,10 @@ jobs:
     - uses: actions/checkout@v4 # ref1
       with:
         ref: ${{ steps.randomize.outputs.ref1 }}
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.bench-on }}
+        sparse-checkout: benchmark
     - name: Run benchmarks
       run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("../benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
     - uses: actions/upload-artifact@v4
@@ -58,6 +57,10 @@ jobs:
     - uses: actions/checkout@v4 # ref2
       with:
         ref: ${{ steps.randomize.outputs.ref2 }}
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.bench-on }}
+        sparse-checkout: benchmark
     - name: Run benchmarks
       run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("../benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
     - uses: actions/upload-artifact@v4
