--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -48,7 +48,7 @@ jobs:
         ref: ${{ inputs.bench-on }}
         sparse-checkout: benchmark
     - name: Run benchmarks
-      run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("../benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
+      run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("benchmark/benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifact-name }}-${{ steps.randomize.outputs.ref1 }}
@@ -62,7 +62,7 @@ jobs:
         ref: ${{ inputs.bench-on }}
         sparse-checkout: benchmark
     - name: Run benchmarks
-      run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("../benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
+      run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("benchmark/benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifact-name }}-${{ steps.randomize.outputs.ref2 }}
