--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -48,6 +48,8 @@ jobs:
         ref: ${{ inputs.bench-on }}
         sparse-checkout: benchmark
     - uses: julia-actions/julia-buildpkg@v1
+    - name: tmate
+      uses: mxschmitt/action-tmate@v4
     - name: Run benchmarks
       run: julia -e 'using Pkg; Pkg.add(path="https://github.com/LilithHafner/ChairmarksForAirspeedVelocity.jl"); Pkg.activate("."); include("benchmark/benchmarks.jl"); using Serialization; serialize("results.jls", run(SUITE))'
     - uses: actions/upload-artifact@v4
