--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["Lilith Orion Hafner <lilithhafner@gmail.com>, Adriano Meligrana <adr
 version = "0.0.0"
 
 [deps]
+AliasTables = "66dad0bd-aa9a-41b7-9441-69ab47430ed8"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+AliasTables = "1"
 Random = "1.10.0"
 julia = "1.10.0"
 
