--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-DynamicDiscreteSamplers = "02edb123-fbf3-4025-abe6-bed5b7376cdf"
+WeightVectors = "02edb123-fbf3-4025-abe6-bed5b7376cdf"
