--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,12 @@ version = "0.0.0"
 
 [deps]
 AliasTables = "66dad0bd-aa9a-41b7-9441-69ab47430ed8"
+BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 AliasTables = "1"
+BitIntegers = "0.3"
 Random = "1.10.0"
 julia = "1.10.0"
 
