--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.0.0"
 [deps]
 AliasTables = "66dad0bd-aa9a-41b7-9441-69ab47430ed8"
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
+Bumper = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 AliasTables = "1"
 BitIntegers = "0.3"
+Bumper = "0.7"
 Random = "1.10.0"
 julia = "1.10.0"
 
