--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.0.0"
 [deps]
 AliasTables = "66dad0bd-aa9a-41b7-9441-69ab47430ed8"
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
+PtrArrays = "43287f4e-b6f4-7ad1-bb20-aadabca52c3d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 AliasTables = "1"
 BitIntegers = "0.3"
+PtrArrays = "1"
 Random = "1.10.0"
 julia = "1.10.0"
 
